update lab test feather